# diary_app_2.0

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml
api/: __init__.py  app.py  record.py  schemas.py
database/: __init__.py  alembic.ini  database.py  models.py  settings.py
database/migrations/: env.py
