[tool.poetry]
name = "diary_app_2.0"
version = "0.1.0"
description = ""
authors = ["Ondřej Divina <phdrBlad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
asyncpg = "^0.25.0"
alembic = "^1.8.0"
bcrypt = "^3.2.2"
password = "^0.2"
sqlmodel = "^0.0.6"
gunicorn = "^20.1.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
# config compatible with Black
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_third_party = ["alembic", "fastapi", "sqlmodel", "pytest", "setuptools", "sqlalchemy"]
